--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
-web:
-  build: .
-  ports:
-    - "8000:80"
-  links:
-    - db
-  volumes:
-    - .:/code
-db:
-  image: "mysql:7"
-  volumes:
-    - ./mysql:/etc/mysql/conf.d
-  environment:
-    MYSQL_ROOT_PASSWORD: phpapptest
-    MYSQL_DATABASE: phpapp
+version: '2'
+services:
+  web:
+    build: .
+    ports:
+      - "8000:80"
+    links:
+      - db
+    volumes:
+      - .:/code
+  db:
+    image: "mysql:7"
+    volumes:
+      - ./mysql:/etc/mysql/conf.d
+    environment:
+      MYSQL_ROOT_PASSWORD: phpapptest
+      MYSQL_DATABASE: phpapp
