--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '2'
+version: '3'
 services:
   web:
     build: .
     ports:
       - "8000:80"
-    links:
+    depends_on:
       - db
     volumes:
       - .:/code
